--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -21,3 +21,38 @@
   margin: 0 auto;
   justify-content: center;
 }
+.sale {
+  position: absolute;
+  top: 20px;
+  left: -40px;
+  background: #1976d2;
+  padding: 3px 0;
+  width: 150px;
+  transform: rotate(-45deg);
+  opacity: 0.7;
+}
+
+@media only screen and (max-width: 1100px) {
+  .card-container {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media only screen and (max-width: 960px) {
+  .card-container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .wrapper {
+    flex-direction: column;
+  }
+}
+
+@media only screen and (max-width: 530px) {
+  .card-container {
+    grid-template-columns: repeat(1, 1fr);
+    width: 90%;
+  }
+}
